--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <title>flexbox-harjoitus</title>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./layout.css" />
+    <script src="https://kit.fontawesome.com/c7ef728e59.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <article class="wrapper">
       <article class="wrapper">
       <header class="header">Tämä laatikko on Header</header>
-
+      <nav>
+        <ul>
+            <li>yksi</li>
+            <li>kaksi</li>
+            <li>kolme</li>
+            <li>neljä</li>
+            <li>viisi</li>
+            <li>kuusi</li>
+        </ul>
+      </nav>
       <main class="main">
         <p>Tämä laatikko on Main</p>
         <p>
@@ -20,6 +30,19 @@
           eligendi itaque provident, iste sint. Tempora illum, excepturi sed
           minus officiis unde eaque?
         </p>
+        <nav class="some">
+            <ul>
+                <li class="Facebook">
+                    <i class="fa-brands fa-square-facebook"></i>
+                </li>
+                <li class="Twitter">
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                </li>
+                <li class="email">
+                    <i class="fa-solid fa-envelope"></i>
+                </li>
+            </ul>
+        </nav>
       </main>
       <aside class="aside aside-1">Tämä laatikko on Aside 1</aside>
       <aside class="aside aside-2">Tämä laatikko on Aside 2</aside>
