--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <article class="wrapper">
       <article class="wrapper">
       <header class="header">Tämä laatikko on Header</header>
-      <nav>
+      <nav class="parent">
         <ul>
             <li>yksi</li>
             <li>kaksi</li>
