--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </p>
         <nav class="some">
             <ul>
-                <li class="Facebook">
+                <li class="facebook">
                     <i class="fa-brands fa-square-facebook"></i>
                 </li>
-                <li class="Twitter">
+                <li class="twitter">
                     <i class="fa-brands fa-square-x-twitter"></i>
                 </li>
                 <li class="email">
